experimental/internal/lexer/testdata/punct.proto.stderr.txt
error: unrecognized token
  --> testdata/punct.proto:2:3
   |
 2 | ! @ # $ % ^ & * + _
   |   ^

error: unrecognized token
  --> testdata/punct.proto:2:5
   |
 2 | ! @ # $ % ^ & * + _
   |     ^

error: unrecognized token
  --> testdata/punct.proto:2:7
   |
 2 | ! @ # $ % ^ & * + _
   |       ^

error: unrecognized token
  --> testdata/punct.proto:2:11
   |
 2 | ! @ # $ % ^ & * + _
   |           ^

error: unrecognized token
  --> testdata/punct.proto:2:13
   |
 2 | ! @ # $ % ^ & * + _
   |             ^

encountered 5 errors
